Bug 249236 - 5 tests in sys.kern.memfd_test.* failed after (r365509, r365525]
Summary: 5 tests in sys.kern.memfd_test.* failed after (r365509, r365525]
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: tests (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Only Me
Assignee: freebsd-testing (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-10 13:56 UTC by Li-Wen Hsu
Modified: 2020-09-11 05:46 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 Li-Wen Hsu freebsd_committer freebsd_triage 2020-09-10 14:01:00 UTC
kevans: can you help to check if this is regression or the test should be adjusted? Thanks!
Comment 2 Kyle Evans freebsd_committer freebsd_triage 2020-09-10 14:09:13 UTC
Sure, let me update one of my machines and I will diagnose this ASAP.
Comment 3 commit-hook freebsd_committer freebsd_triage 2020-09-10 17:16:11 UTC
A commit references this bug:

Author: lwhsu
Date: Thu Sep 10 17:15:45 UTC 2020
New revision: 365592
URL: https://svnweb.freebsd.org/changeset/base/365592

Log:
  Temporarily skip failing sys.kern.memfd_test.* tests in CI

  PR:		249236
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/tests/sys/kern/memfd_test.c
Comment 4 commit-hook freebsd_committer freebsd_triage 2020-09-10 17:24:13 UTC
A commit references this bug:

Author: kevans
Date: Thu Sep 10 17:23:30 UTC 2020
New revision: 365593
URL: https://svnweb.freebsd.org/changeset/base/365593

Log:
  Fix memfd_create tests after r365524

  r365524 did accidentally invert this check that sets SHM_LARGEPAGE, leading
  non-hugetlb memfd as unconfigured largepage shm and thus test failures when
  we try to ftruncate or write to them.

  PR:		249236
  Discussed with:	kib

Changes:
  head/lib/libc/sys/shm_open.c
Comment 5 Kyle Evans freebsd_committer freebsd_triage 2020-09-10 17:35:25 UTC
(In reply to commit-hook from comment #4)

Fix committed, I'll leave reverting the skip commit to you in case you want to confirm the tests pass now (they do for me).
Comment 6 Li-Wen Hsu freebsd_committer freebsd_triage 2020-09-10 17:36:34 UTC
(In reply to Kyle Evans from comment #5)
No problem, I'll verify again after we have r365593 image on artifact server.
Comment 7 Kyle Evans freebsd_committer freebsd_triage 2020-09-10 18:01:42 UTC
(In reply to Li-Wen Hsu from comment #6)

I note that base r365603 will also need to be reverted, which fixes up the test-skip.
Comment 8 commit-hook freebsd_committer freebsd_triage 2020-09-11 05:46:06 UTC
A commit references this bug:

Author: lwhsu
Date: Fri Sep 11 05:45:28 UTC 2020
New revision: 365625
URL: https://svnweb.freebsd.org/changeset/base/365625

Log:
  Revert r365592 and r365603 as the tests are fixed by r365593

  PR:		249236
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/tests/sys/kern/memfd_test.c